Implement drag & reorder functionality & new API
NOTES:

- uses html5sortable for drag & reorder
- manual sorting button is located after A-Z button in toolbar
- NEW API method TestPlan.update_case_order()
- Manual reorder & API require the testcases.change_testcaseplan
  permission

- toolbarDropdowns() is called from within toolbarEvents() b/c
  it really doesn't make sense to have this as stand-alone function
- toolbarEvents() is moved within the TestCases.filter() callback
  b/c we need the list of test cases to be fully initialized so we
  can get the initial sorting order and use it later

WARNINGS:

- may want to unbind the on-click event for rows if users are
  having problems with the rows expanding while dragging them

--- a/tcms/package.json
+++ b/tcms/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap-switch": "3.3.4",
+    "html5sortable": "0.9.18",
     "marked": "1.2.0",
     "patternfly": "3.59.5",
     "prismjs": "1.22.0",
